# Some-Cpp

./: CMakeLists.txt  algos.h  algos_examples.cpp  allocator.h  buffer.cpp  circular_buffer.h  geometry.cpp  geometry.h  main.cpp  polynomial.cpp  polynomial.h  rand_iter.h  tests.h
Entities/CubeEntity/: cube.cpp  cube.h
Models/CubeChecker/: fair_cube_check.cpp  fair_cube_checker.h
Models/DrawModel/: drawer.cpp  drawer.h
Models/SmallCubeModel/: tiny_cube.cpp  tiny_cube.h
Tools/: gl_params.h  plan.md
lab2/: CMakeLists.txt  main.cpp
lab2/CurrencyObject/: Currency.cpp  Currency.h
lab2/Manager/: CurrencyManager.cpp  CurrencyManager.h
lab2/include/: simple_include.h
lab2/utility/: Colours.cpp  MedianHeap.cpp  MedianHeap.h
lab3/: CMakeLists.txt  algorithms.h  circular_buffer.h  iterator.h  main.cpp
simple_include/: include.h
